--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </center>
 <table cellspacing=30>
   <tr>
-    <td><img src="azzam copy copy.jpg" alt="Azzam Pic" width="200" height="200"></td>
+    <td><img src="azzam.jpg" alt="Azzam Pic" width="200" height="200"></td>
     <td>
       <table>
         <tr>
