--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </center>
 <table cellspacing=30>
   <tr>
-    <td><img src="azzam.jpg" alt="Azzam Pic" width="200" height="200"></td>
+    <td><img src="https://raw.githubusercontent.com/mazzams/CV/master/azzam.JPG" alt="Azzam Pic" width="200" height="200"></td>
     <td>
       <table>
         <tr>
